welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:6: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:12: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^SnakeBuggle:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SnakeBuggle:17: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return false
  ^SnakeBuggle:38: error: value unary_! is not a member of Unit
  while (!fonctionTest()) {
         ^